# rshtml

./: .gitignore  Cargo.toml  README.md  run-all-tests.sh
core_macro_lib/: Cargo.toml
core_macro_lib/src/: extend_derive.rs  ihaz_attributes_macro.rs  imodel_macro.rs  iviewmodel_macro.rs  lib.rs  reflect_attributes_macro.rs  reflect_methods_macro.rs  reflect_properties_macro.rs
core_macro_lib/src/ast/: attribute.rs  method.rs  mod.rs  property.rs
core_macro_lib/src/sys/: mod.rs
mvc_lib/: Cargo.toml
mvc_lib/src/: errors.rs  lib.rs
mvc_lib/src/action_results/: file_result.rs  http_result.rs  iaction_result.rs  mod.rs  redirect_action_result.rs  view_result.rs
mvc_lib/src/app/: background_service.rs  http_request_pipeline.rs  ihttp_request_pipeline.rs  mod.rs  web_api_service.rs  web_program.rs
mvc_lib/src/attributes/: display_name_attribute.rs  mod.rs
mvc_lib/src/auth/: auth_role_json_file_dbset.rs  iauth_role.rs  iauthroles_dbset_provider.rs  mod.rs
mvc_lib/src/contexts/: connection_context.rs  controller_context.rs  fromstring_connection_context.rs  httpconnection_context.rs  iconnection_context.rs  ihttpconnection_context.rs  irequest_context.rs  iresponse_context.rs  itcpconnection_context.rs  mod.rs  request_context.rs  response_context.rs  tcp_connection_context.rs  view_context.rs
mvc_lib/src/controller_action_features/: authorize.rs  controller_action_feature.rs  local_host_only.rs  mod.rs
mvc_lib/src/controller_actions/: builder.rs  closure.rs  controller_action.rs  file.rs  member_fn.rs  mod.rs  route_pattern.rs
mvc_lib/src/controllers/: controller_action.rs  controller_action_mapped.rs  controller_actions_map.rs  dev_controller.rs  file_provider_controller.rs  home_controller.rs  icontroller.rs  icontroller_extensions.rs  mod.rs  route_data_controller_action_matcher.rs
mvc_lib/src/core/: buffered_tcpstream.rs  content_type_resolver.rs  html_buffer.rs  itcp_stream_wrapper.rs  mod.rs  panic_or_return_error.rs  query_string.rs  string_extensions.rs  type_info.rs
mvc_lib/src/diagnostics/: mod.rs
mvc_lib/src/entity/: idbset.rs  json_file_dbset.rs  mod.rs  vec_dbset.rs
mvc_lib/src/error/: error_context.rs  error_handler_middleware.rs  error_handler_service.rs  error_handling_middleware.rs  error_handling_service.rs  error_view_middleware.rs  error_viewmodel_service.rs  http500_error_handler.rs  ierror_context.rs  ierror_handler.rs  log_error_handler.rs  mod.rs
mvc_lib/src/html/: gen.rs
mvc_lib/src/http/: http_body_content.rs  http_body_format_resolver.rs  http_body_format_service.rs  ihttp_body_format_resolver.rs  ihttp_body_stream_format.rs  mod.rs  request_decoder_middleware.rs  response_encoder_middleware.rs  url_encoded_body.rs
mvc_lib/src/middleware/: authorize_controller_action_middleware.rs  mod.rs  redirect_https.rs  request_decoder_middleware.rs  response_encoder_middleware.rs
mvc_lib/src/model/: form_url_encoded_binder.rs  form_url_encoded_model.rs  iviewmodel_binder.rs  iviewmodel_decoder.rs  iviewmodel_encoder.rs  mod.rs  model_decoder_resolver.rs  model_encoder_resolver.rs  view_model_binder_resolver.rs  view_model_result.rs
mvc_lib/src/model_binder/: ihaz_attributes.rs  imodel.rs  imodel_attribute.rs  imodel_binder.rs  imodel_method.rs  imodel_property.rs  imodelbinder_service.rs  iviewmodel.rs  iviewmodel_binder.rs  iviewmodel_encoder.rs  mod.rs  model_binder_middleware.rs  model_binder_resolver.rs  model_serializer_resolver.rs  model_validation_result.rs  modelbinder_service.rs  reflected_attribute.rs  reflected_method.rs  reflected_property.rs  url_encoded_model.rs  view_model_binder_resolver.rs  view_model_result.rs
mvc_lib/src/options/: file_provider_controller_options.rs  http_options.rs  logging_services_options.rs  mod.rs
mvc_lib/src/routing/: action_path.rs  iurl_helper.rs  iurl_helpers.rs  mod.rs  path_builder.rs  route_data.rs  route_values_builder.rs  url_helper.rs  url_helpers.rs
mvc_lib/src/services/: action_result_handler_middleware.rs  authorization_service.rs  controller_action_execute_service.rs  default_services.rs  file_provider_service.rs  host_environment.rs  logging_services.rs  mod.rs  routemap_service.rs  (+7 more)
mvc_lib/tests/: one_off_tests.rs  rusthtml_parser_tests.rs
rusthtml/: Cargo.toml
rusthtml/src/: html_string.rs  lib.rs  rusthtml_error.rs  rusthtml_lang_part.rs  rusthtml_parser.rs  rusthtml_token.rs
(+368 files in other folders)
