[package]
name = "rusthtml"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
as-any = "0.3.0"
bytestream = "0.4"
html-escape = "0.2.13"
regex = "1.7.1"
syn = { version = "1.0.109", features = ["full"] }
rustc_lexer = "0.1.0"
proc-macro2 = "1.0.51"
quote = "1.0.23"
htmlnode = { path = "../htmlnode" }